--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">LiveNewsFeed</string>
+    <string name="app_name">Live News</string>
+    <string name="No_News">No News reported</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="settings_menu_item">Settings</string>
+    <string name="settings_title">LiveNewsFeed Settings</string>
+    <string name="settings_section_name_label">Section</string>
+    <string name="settings_section_name_key" translatable="false">section</string>
+    <string name="settings_section_name_default" translatable="false">football</string>
 </resources>
